--- a/Lip_sync.ipynb
+++ b/Lip_sync.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP1y7TG0kIlPjWcLh/HdFr4",
+      "authorship_tag": "ABX9TyMdY47acfxD6Tz43YBUBzMj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Upload video and audio"
+        "# **Upload video and audio**"
       ],
       "metadata": {
         "id": "P3aFQsevfYpP"
@@ -95,7 +95,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Creating wav2lip video**"
+        "# **Creating wav2lip video**"
       ],
       "metadata": {
         "id": "YIlrnY0SjxWf"
