--- a/Lip_sync.ipynb
+++ b/Lip_sync.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMdY47acfxD6Tz43YBUBzMj",
+      "authorship_tag": "ABX9TyMTDqJKGjm1K0zuC61zqtRK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Set up Wav2lip library"
+        "# **Set up Wav2lip library**"
       ],
       "metadata": {
         "id": "L0EDGAkodfId"
