--- a/Lip_sync.ipynb
+++ b/Lip_sync.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMTDqJKGjm1K0zuC61zqtRK",
+      "authorship_tag": "ABX9TyP5tndx2m4XPx8nwtxBZk1U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,11 +80,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# uploading data to colab environment\n",
-        "%cd sample_data/\n",
-        "from google.colab import files\n",
-        "uploaded = files.upload()\n",
-        "%cd .."
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive',force_remount=True)"
       ],
       "metadata": {
         "id": "O2a44hJfe17Q"
@@ -105,7 +102,7 @@
       "cell_type": "code",
       "source": [
         "# using wav2lip GAN\n",
-        "!cd Wav2Lip && python inference.py --checkpoint_path checkpoints/wav2lip_gan.pth --face /content/sample_data/output_video_720p.mp4 --audio /content/sample_data/output10.wav"
+        "!cd /content/Wav2Lip && python inference.py --checkpoint_path checkpoints/wav2lip_gan.pth --face /content/drive/MyDrive/wav2lip/output_video_720p.mp4 --audio /content/drive/MyDrive/wav2lip/output10.wav --pads 0 -5 0 0"
       ],
       "metadata": {
         "id": "SCgWvZFjf01l"
